[package]
name = "tiny-curve"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Small-order elliptic curves for testing"
repository = "https://github.com/fjarri/tiny-curve"
readme = "README.md"
categories = ["cryptography", "no-std"]
rust-version = "1.79"

[dependencies]
primeorder = { version = "0.13", default-features = false }
num-traits = { version = "0.2", default-features = false }
sha2 = { version = "0.10", default-features = false }

ecdsa = { version = "0.16", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
k256 = "0.13"
proptest = "1"

[features]
serde = ["primeorder/serde"]
ecdsa = ["ecdsa/signing", "ecdsa/verifying"]

[[bench]]
bench = true
name = "bench"
harness = false
path = "benches/bench.rs"
