[package]
name = "tiny-curve"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Small-order elliptic curves for testing"
repository = "https://github.com/fjarri/tiny-curve"
readme = "README.md"
categories = ["cryptography", "no-std"]
rust-version = "1.81"

[dependencies]
primeorder = { version = "0.13", default-features = false }
elliptic-curve = { version = "0.13", default-features = false } # version-matched with `primeorder`
num-traits = { version = "0.2", default-features = false }
sha2 = { version = "0.10", default-features = false }

ecdsa = { version = "0.16", default-features = false, optional = true }
bip32 = { version = "0.5", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
k256 = "0.13"
proptest = "1"
postcard = { version = "1", features = ["alloc"] }
serde = "1"

[features]
serde = ["primeorder/serde", "pkcs8", "ecdsa?/serde", "ecdsa?/pem"]
ecdsa = ["ecdsa/signing", "ecdsa/verifying"]
pkcs8 = ["elliptic-curve/pkcs8"]
bip32 = ["dep:bip32", "elliptic-curve/sec1"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
bench = true
name = "bench"
harness = false
path = "benches/bench.rs"
